se ajusto el makefile y readme